미사용코드 제거, 기타 오류 수정(Backend)